Fixed header being too tall on Firefox.

--- a/public/css/glasseye.css
+++ b/public/css/glasseye.css
@@ -49,3 +49,7 @@ body{
 .pure-table thead{
   text-align: center;
 }
+
+.pure-menu-horizontal {
+  white-space: normal;
+}
